# LayerCraft

./: .gitignore  README.md  analyze_structure.py  pyproject.toml  verify_correlate.py
examples/: run_minimal_pipeline.py  run_raw_pipeline.py
layercraft/: __init__.py
layercraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
layercraft/auto/: __init__.py  skill_generator.py
layercraft/core/: executor.py  navigator.py  registry.py
layercraft/llm/: __init__.py  intent_parser.py
layercraft/skills/: __init__.py  _scope.py  aggregate.py  correlate.py  normalize.py
tests/: test_core_engine.py
