[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layercraft"
version = "0.1.0"
description = "LayerCraft - Intelligent Data Structure Automation Framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scipy>=1.10",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["layercraft*"]
